# aoc2023

./: .gitignore  LICENSE  README.md  cspell.json  manage.py  pyproject.toml
aoc2023/: __init__.py  __main__.py  data.py
aoc2023/day01/: __init__.py  data.py  solution.py  tests.py
aoc2023/day02/: __init__.py  data.py  solution.py  tests.py
aoc2023/day03/: __init__.py  data.py  solution.py  tests.py
aoc2023/day04/: __init__.py  data.py  solution.py  tests.py
aoc2023/day05/: __init__.py  data.py  solution.py  tests.py
aoc2023/tests/: __init__.py  test_cli.py  test_tests.py
templates/day/: data.py.j2  tests.py.j2
